clean4u/src/main/java/org/example/clean4u/_core/errors/exception/Exception404.java
package org.example.clean4u._core.errors.exception;

public class Exception404 extends RuntimeException {
    public Exception404(String message) {
        super(message);
    }
}
